--- a/package.json
+++ b/package.json
@@ -1,20 +1,128 @@
 {
-  "name": "happy-hotel-electron",
-  "version": "0.1.0",
-  "main": "main.js",
+  "name": "electron-react-typescript",
+  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
+  "version": "2.0.0",
+  "description": "An Electron boilerplate including TypeScript, React, Jest and ESLint.",
+  "main": "./.webpack/main/index.js",
   "scripts": {
-    "start": "electron .",
-    "packager": "electron-packager ./ --platform=win32",
-    "dist": "electron-builder"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "release": "electron-forge publish",
+    "lint:eslint": "eslint --cache --fix --ext .js,.ts,.tsx --max-warnings=0",
+    "lint:stylelint": "stylelint ./src --fix",
+    "prettier": "prettier -c \"**/**\" --write",
+    "test": "jest"
   },
-  "dependencies": {},
+  "keywords": [],
+  "license": "MIT",
+  "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hot-loader": "4.13.0"
+  },
   "devDependencies": {
-    "electron-builder": "^22.9.1",
-    "electron": "^11.2.2"
+    "@babel/core": "7.14.6",
+    "@babel/plugin-transform-runtime": "7.14.5",
+    "@babel/preset-env": "7.14.5",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "7.14.5",
+    "@electron-forge/cli": "6.0.0-beta.57",
+    "@electron-forge/maker-deb": "6.0.0-beta.57",
+    "@electron-forge/maker-rpm": "6.0.0-beta.57",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.57",
+    "@electron-forge/maker-zip": "6.0.0-beta.57",
+    "@electron-forge/plugin-webpack": "6.0.0-beta.57",
+    "@marshallofsound/webpack-asset-relocator-loader": "0.5.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "11.2.7",
+    "@types/electron-devtools-installer": "2.2.0",
+    "@types/jest": "26.0.23",
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.8",
+    "@types/styled-components": "5.1.10",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
+    "babel-loader": "8.2.2",
+    "cross-env": "7.0.3",
+    "electron": "13.1.2",
+    "eslint": "7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "5.0.0",
+    "jest": "27.0.4",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.3.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "ts-jest": "27.0.3",
+    "typescript": "4.3.4",
+    "wait-on": "5.3.0"
   },
-  "build": {
-    "win": {
-      "icon": "assets/fav.ico"
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "name": "Electron starter",
+        "executableName": "electron-starter",
+        "icon": "assets/icon",
+        "extraResource": [
+          "assets"
+        ]
+      },
+      "plugins": [
+        [
+          "@electron-forge/plugin-webpack",
+          {
+            "mainConfig": "./webpack/main.webpack.js",
+            "renderer": {
+              "config": "./webpack/renderer.webpack.js",
+              "entryPoints": [
+                {
+                  "html": "./public/index.html",
+                  "js": "./src/index.tsx",
+                  "name": "main_window",
+                  "preload": {
+                    "js": "./electron/bridge.ts"
+                  }
+                }
+              ]
+            }
+          }
+        ]
+      ],
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "Electron Starter"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
     }
   }
 }
